# graph-autofusion

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  build.sh  classify_rule.yaml  version.info
super_kernel/: CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt
super_kernel/docs/: developer_guide.md  super_kernel迁移设计.md
super_kernel/docs/res/: 解耦A图.excalidraw
super_kernel/examples/: README.md
super_kernel/examples/super_kernel_base/: README.md  superkernel_scope.py
super_kernel/examples/super_kernel_profiling/: README.md  superkernel_compare.py
super_kernel/examples/super_kernel_runtime_ascendc_only/: README.md  compile_sk.py  superkernel_runtime_ascendc_basic.py  utils.py
super_kernel/scripts/: sk_st_cfg.toml  sk_ut_cfg.toml
super_kernel/src/superkernel/: super_kernel.py  super_kernel_compile_base.py  super_kernel_op_infos.py  super_kernel_option_parse.py  super_kernel_sub_op_infos.py
super_kernel/tests/: conftest.py
super_kernel/tests/fixtures/: __init__.py  config.py  sub_kernel.py
super_kernel/tests/st/: __init__.py  conftest.py
super_kernel/tests/st/fixtures/: config.py  sub_kernel.py
super_kernel/tests/st/scenarios/: test_smoke.py
super_kernel/tests/ut/: __init__.py  conftest.py  test_super_kernel.py  test_super_kernel_op_infos.py  test_super_kernel_sub_op_infos.py
super_kernel/tests/ut/fixtures/: __init__.py  config.py
super_kernel/tests/ut/golden/: test_add_kernel.cpp  test_gen_super_kernel_file_2_stream.cpp
super_kernel/tests/utils/: __init__.py  validators.py
(+217 files in other folders)
